[gd_scene load_steps=45 format=3 uid="uid://ryhx8o46er7i"]

[ext_resource type="Script" uid="uid://bswiktpbm1d50" path="res://src/player/2D/madotsuki/player_yn.gd" id="1_wub1p"]
[ext_resource type="Script" uid="uid://jf85vmwx4pj" path="res://src/player/2D/scripts/pl_variables.gd" id="2_f263f"]
[ext_resource type="Script" uid="uid://5yx7vlyaocq" path="res://src/entities/component/sb_health.gd" id="5_2gyta"]
[ext_resource type="Script" uid="uid://cvno7u6wdvsg8" path="res://src/entities/footsteps/footstep_system.gd" id="5_xe7mj"]
[ext_resource type="Script" uid="uid://b8o626ec7226k" path="res://src/systems/audio/sound_player_2d.gd" id="6_3hhoi"]
[ext_resource type="Script" uid="uid://dtqoa37rhrqdu" path="res://src/player/2D/scripts/components/pl_mental_status.gd" id="6_mbimu"]
[ext_resource type="Script" uid="uid://dd0qxrsakskma" path="res://src/entities/component/sb_component_receiver.gd" id="7_ps2wd"]
[ext_resource type="AnimationLibrary" uid="uid://yubpgajftv6v" path="res://src/player/2D/madotsuki/animation_libs/action.tres" id="8_57bvo"]
[ext_resource type="Script" uid="uid://dklkysmgxwdv2" path="res://src/entities/component/sb_animator.gd" id="8_cin7d"]
[ext_resource type="Texture2D" uid="uid://v1tx4oh6hb3y" path="res://src/player/2D/madotsuki/display/default/_RESET_match.png" id="8_mbimu"]
[ext_resource type="AnimationLibrary" uid="uid://bm1cor2werd5w" path="res://src/player/2D/madotsuki/animation_libs/emote.tres" id="9_m68sj"]
[ext_resource type="Script" uid="uid://cb08xjc16uxc7" path="res://src/player/2D/scripts/managers/pl_equip_manager.gd" id="9_y4vx3"]
[ext_resource type="AnimationLibrary" uid="uid://beo0dtar63jr7" path="res://src/player/2D/madotsuki/animation_libs/normal.tres" id="10_mbimu"]
[ext_resource type="Script" uid="uid://ce1ox7oil4djt" path="res://src/player/2D/scripts/managers/pl_action_manager.gd" id="10_rhwps"]
[ext_resource type="Script" uid="uid://dh7dintxcyffh" path="res://src/player/2D/scripts/managers/pl_interact_manager.gd" id="11_bof2k"]
[ext_resource type="AnimationLibrary" uid="uid://jmtvl5nfo2wn" path="res://src/player/2D/madotsuki/animation_libs/reset.tres" id="11_wc1wu"]
[ext_resource type="Script" uid="uid://dyhtvuyxwohdq" path="res://src/entities/component/sb_sprite_handler.gd" id="13_p5dbe"]
[ext_resource type="Texture2D" uid="uid://cgt6yqo0ynnak" path="res://src/player/2D/scripts/behaviour/interaction_prompt.png" id="17_cin7d"]
[ext_resource type="Script" uid="uid://ckdi4htcyco6l" path="res://src/entities/component/sb_sprint.gd" id="18_k7c3c"]
[ext_resource type="Script" uid="uid://sd3feymdmkd6" path="res://src/systems/tools/FSM/sentient_fsm.gd" id="18_rujao"]
[ext_resource type="Script" uid="uid://du8llo3s6lchk" path="res://src/entities/component/sb_input.gd" id="19_57bvo"]
[ext_resource type="Script" uid="uid://bcy41p4huaij7" path="res://src/player/2D/scripts/states/stamina/normal.gd" id="20_fr82v"]
[ext_resource type="Script" uid="uid://bk7ea81npilfk" path="res://src/player/2D/scripts/states/stamina/exhausted.gd" id="21_5r1vc"]
[ext_resource type="Script" uid="uid://copf228upsgds" path="res://src/player/2D/scripts/states/movement/state_pl_idle.gd" id="22_e8irh"]
[ext_resource type="Script" uid="uid://8lqdoulxnowh" path="res://src/player/2D/scripts/states/movement/super_state_pl_move.gd" id="24_t8l7d"]
[ext_resource type="Script" uid="uid://mw73mitc7ufu" path="res://src/player/2D/scripts/states/movement/state_pl_walk.gd" id="24_ydgy1"]
[ext_resource type="Script" uid="uid://ybbhtmvclmcj" path="res://src/player/2D/scripts/states/movement/state_pl_run.gd" id="25_fc8o1"]
[ext_resource type="Script" uid="uid://0gg3uqjct50j" path="res://src/player/2D/scripts/states/movement/state_pl_sneak.gd" id="26_naf4t"]
[ext_resource type="Script" uid="uid://bmml0v7khpsyf" path="res://src/player/2D/scripts/states/movement/state_pl_climb.gd" id="27_xcxb0"]
[ext_resource type="Script" uid="uid://s2qduwa65o" path="res://src/player/2D/scripts/states/misc/state_pl_action.gd" id="28_4wyx3"]
[ext_resource type="Texture2D" uid="uid://05eixr261ttf" path="res://src/entities/shadow.png" id="29_1qwjo"]
[ext_resource type="Script" uid="uid://dgrha4aqsx4kh" path="res://src/systems/audio/sound_player.gd" id="30_cin7d"]
[ext_resource type="Script" uid="uid://dlvvx5cthl4bp" path="res://src/systems/utils/spritesheet_formatter.gd" id="30_kknx7"]
[ext_resource type="Script" uid="uid://bnajku7ggsr2q" path="res://src/systems/world_loop/loopable_component.gd" id="35_bfa5j"]

[sub_resource type="Resource" id="Resource_57bvo"]
resource_local_to_scene = true
resource_name = "pl_variables"
script = ExtResource("2_f263f")

[sub_resource type="Animation" id="Animation_m68sj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../sprite_container/sprite_renderer:progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../sprite_container/sprite_renderer:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_mbimu")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m68sj"]
_data = {
&"RESET": SubResource("Animation_m68sj")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mbimu"]
blend_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4moul"]
size = Vector2(6, 3)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_riukl"]
radius = 8.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qcosp"]
blend_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7co0"]
size = Vector2(10, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8oc4"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ylvyo"]
size = Vector2(16, 26)

[node name="madotsuki" type="CharacterBody2D" node_paths=PackedStringArray("stamina_fsm", "fsm", "sprite_renderer", "shadow_renderer")]
collision_layer = 5
motion_mode = 1
script = ExtResource("1_wub1p")
stamina_fsm = NodePath("stamina_fsm")
fsm = NodePath("stance_fsm")
values = SubResource("Resource_57bvo")
sprite_renderer = NodePath("sprite_container/sprite_renderer")
shadow_renderer = NodePath("sprite_container/shadow_renderer")

[node name="sb_components" type="Node2D" parent="."]
script = ExtResource("7_ps2wd")

[node name="health" type="Node2D" parent="sb_components"]
script = ExtResource("5_2gyta")

[node name="blood_particles" type="CPUParticles2D" parent="sb_components/health"]
emitting = false

[node name="mental_status" type="Node" parent="sb_components"]
script = ExtResource("6_mbimu")

[node name="animation_manager" type="Node" parent="sb_components"]
script = ExtResource("8_cin7d")

[node name="animation_player" type="AnimationPlayer" parent="sb_components/animation_manager"]
libraries = {
&"": SubResource("AnimationLibrary_m68sj"),
&"action": ExtResource("8_57bvo"),
&"emote": ExtResource("9_m68sj"),
&"normal": ExtResource("10_mbimu"),
&"reset": ExtResource("11_wc1wu")
}
playback_auto_capture = false

[node name="action_manager" type="Node" parent="sb_components" node_paths=PackedStringArray("cooldown_timer")]
script = ExtResource("10_rhwps")
cooldown_timer = NodePath("timer")

[node name="timer" type="Timer" parent="sb_components/action_manager"]

[node name="equip_manager" type="Node2D" parent="sb_components"]
script = ExtResource("9_y4vx3")

[node name="footstep_manager" type="Node2D" parent="sb_components"]
material = SubResource("CanvasItemMaterial_mbimu")
script = ExtResource("5_xe7mj")

[node name="sound_player" type="AudioStreamPlayer2D" parent="sb_components/footstep_manager"]
process_mode = 1
max_distance = 750.0
bus = &"Effects"
script = ExtResource("6_3hhoi")
metadata/_custom_type_script = "uid://b8o626ec7226k"

[node name="terrain_detector" type="Area2D" parent="sb_components/footstep_manager"]
collision_layer = 8
collision_mask = 9

[node name="col" type="CollisionShape2D" parent="sb_components/footstep_manager/terrain_detector"]
position = Vector2(0, 13.5)
shape = SubResource("RectangleShape2D_4moul")
debug_color = Color(0.845999, 0.0997133, 0.874914, 0.42)

[node name="interaction_manager" type="Node2D" parent="sb_components" node_paths=PackedStringArray("field")]
process_mode = 1
script = ExtResource("11_bof2k")
field = NodePath("field")

[node name="field" type="Area2D" parent="sb_components/interaction_manager"]
position = Vector2(0, 4)
rotation = 1.5708
collision_layer = 2
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="sb_components/interaction_manager/field"]
position = Vector2(16, -5.79198e-05)
shape = SubResource("CapsuleShape2D_riukl")

[node name="prompt" type="Sprite2D" parent="sb_components/interaction_manager"]
visible = false
z_index = 5
position = Vector2(0, -20)
texture = ExtResource("17_cin7d")

[node name="sprite_manager" type="Node" parent="sb_components" node_paths=PackedStringArray("sprite_container")]
script = ExtResource("13_p5dbe")
sprite_container = NodePath("../../sprite_container")
metadata/_custom_type_script = "uid://bgisym1hdeqgt"

[node name="sprint_manager" type="Node" parent="sb_components" node_paths=PackedStringArray("stamina_fsm")]
script = ExtResource("18_k7c3c")
stamina_fsm = NodePath("../../stamina_fsm")
metadata/_custom_type_script = "uid://ckdi4htcyco6l"

[node name="input" type="Node" parent="sb_components"]
script = ExtResource("19_57bvo")
metadata/_custom_type_script = "uid://du8llo3s6lchk"

[node name="stamina_fsm" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("18_rujao")
initial_state = NodePath("NORMAL")

[node name="NORMAL" type="Node" parent="stamina_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("20_fr82v")
transitions = [NodePath("../EXHAUSTED")]

[node name="EXHAUSTED" type="Node" parent="stamina_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("21_5r1vc")
transitions = [NodePath("../NORMAL")]

[node name="stance_fsm" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("18_rujao")
initial_state = NodePath("IDLE")

[node name="IDLE" type="Node" parent="stance_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("22_e8irh")
transitions = [NodePath("../MOVE"), NodePath("../ACTION")]

[node name="MOVE" type="Node" parent="stance_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("24_t8l7d")
transitions = [NodePath("../IDLE"), NodePath("../ACTION")]
metadata/_custom_type_script = "uid://528ddyxm13yn"

[node name="WALK" type="Node" parent="stance_fsm/MOVE" node_paths=PackedStringArray("transitions")]
script = ExtResource("24_ydgy1")
transitions = [NodePath("../SPRINT"), NodePath("../SNEAK")]

[node name="SPRINT" type="Node" parent="stance_fsm/MOVE" node_paths=PackedStringArray("sb_sprint", "transitions")]
script = ExtResource("25_fc8o1")
sb_sprint = NodePath("../../../sb_components/sprint_manager")
transitions = [NodePath("../WALK")]

[node name="SNEAK" type="Node" parent="stance_fsm/MOVE" node_paths=PackedStringArray("transitions")]
script = ExtResource("26_naf4t")
transitions = [NodePath("../WALK")]

[node name="CLIMB" type="Node" parent="stance_fsm"]
script = ExtResource("27_xcxb0")

[node name="ACTION" type="Node" parent="stance_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("28_4wyx3")
transitions = [NodePath("../IDLE"), NodePath("../MOVE")]

[node name="movement_fsm" type="Node" parent="."]

[node name="nav" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
navigation_layers = 8
avoidance_enabled = true
avoidance_layers = 2

[node name="audio_listener" type="AudioListener2D" parent="."]
current = true

[node name="sprite_container" type="Node2D" parent="."]

[node name="shadow_renderer" type="Sprite2D" parent="sprite_container"]
material = SubResource("CanvasItemMaterial_qcosp")
position = Vector2(0, 16)
texture = ExtResource("29_1qwjo")
offset = Vector2(0, -22)

[node name="sprite_renderer" type="Sprite2D" parent="sprite_container"]
clip_children = 2
use_parent_material = true
position = Vector2(0, 16)
texture = ExtResource("8_mbimu")
offset = Vector2(0, -24)
script = ExtResource("30_kknx7")
frame_dimensions = Vector2i(48, 48)

[node name="shader" type="ColorRect" parent="sprite_container/sprite_renderer"]
offset_left = -24.0
offset_top = -48.0
offset_right = 24.0
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_w7co0")

[node name="centre_trigger" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 2147483648

[node name="_" type="CollisionShape2D" parent="centre_trigger"]
shape = SubResource("RectangleShape2D_r8oc4")

[node name="region_trigger" type="Area2D" parent="."]
collision_layer = 1073741824
collision_mask = 1073741824

[node name="_" type="CollisionShape2D" parent="region_trigger"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_ylvyo")

[node name="sound_player" type="AudioStreamPlayer" parent="."]
bus = &"Effects"
script = ExtResource("30_cin7d")
metadata/_custom_type_script = "uid://dgrha4aqsx4kh"

[node name="pl_loop" type="Node2D" parent="." node_paths=PackedStringArray("target", "children")]
y_sort_enabled = true
script = ExtResource("35_bfa5j")
target = NodePath("..")
children = [NodePath("../sb_components"), NodePath("../stamina_fsm"), NodePath("../stance_fsm"), NodePath("../movement_fsm"), NodePath("../nav"), NodePath("../audio_listener"), NodePath("../sprite_container"), NodePath("../collision"), NodePath("../centre_trigger"), NodePath("../sound_player")]
do_not_dupe = true
metadata/_custom_type_script = "uid://bnajku7ggsr2q"
